--- a/index.qmd
+++ b/index.qmd
@@ -21,3 +21,5 @@ olá! me chamo maria cecília e curso estatística na universidade federal de ub
 uso principalpente a liguagem r, mas tenho interesse de aprender outras linguagens.
 
 eu não sei mais o que escreveeer
+
+AAAAAAAAAAAHHHHHHHHHHHHHHHHHHHHHHH
