--- a/posts/projeto1.qmd
+++ b/posts/projeto1.qmd
@@ -1,3 +1,7 @@
 ---
-title: "cogumelos"
+title: "web scraping - stardew valley"
+image: stardewvalley_logo.jpg
+categories: ["r", "web scraping", "em andamento"]
+description: raspagem de dados do wiki de stardew valley para criar um arquivo contendo os aldeões e os melhores e piores presentes para dá-los.
 ---
+
