--- a/index.qmd
+++ b/index.qmd
@@ -6,21 +6,24 @@ about:
   image-shape: rounded
   image-width: 22em 
   links:
-  - icon: github
-    text: github
-    href: https://github.com/mariacecilia-macedo
   - icon: envelope-at
     text: email
     href: mailto:mariacecilia.macedo22@gmail.com
+  - icon: github
+    text: github
+    href: https://github.com/mariacecilia-macedo
+  - icon: linkedin
+    text: linkedin
+    href: https://www.linkedin.com/in/maria-cec%C3%ADlia-macedo-722190262/
 ---
 
 ## sobre mim 
 
-olá! me chamo maria cecília, atualmente estou cursando estatística na universidade federal de uberlândia. ao longo do meu percurso acadêmico as áreas de machine learning e data science me chamaram bastante atenção.
+olá! me chamo maria cecília, atualmente curso estatística na universidade federal de uberlândia. ao longo do meu percurso acadêmico as áreas de machine learning e data science me chamaram bastante atenção.
 
-minha principal ferramenta é a liguagem r, busco aprimorar meus conhecimentos nela e também aprender outras linguagens. no momento tenho me interassado e estudado python, pois sei da sua importância na área que escolhi para atuar.
+minha principal ferramenta é a liguagem r, busco aprimorar meus conhecimentos nela e também aprender outras linguagens. no momento tenho me interassado e estudado python, pois sei da sua importância no mercado de trabalho e nas áreas que me interessei.
 
-meu intuito ao criar essa página é para que ela sirva como um portifólio e que eu atualize ela com meus projetos concluídos e em andamento
+meu intuito ao criar essa página é para que ela sirva como um portifólio e que eu atualize ela com meus projetos concluídos e em andamento.
 
 sinta-se à vontade para explorar e entrar em contato comigo!
 
