--- a/posts/dashboard_pinguim/dashboard_pinguim.qmd
+++ b/posts/dashboard_pinguim/dashboard_pinguim.qmd
@@ -1,7 +1,7 @@
 ---
 title: "criação de dashboards"
 image: pinguins.jpg
-categories: ["r", "dashboard", "concluído"]
+categories: ["r", "dashboard", "quarto", "concluído"]
 description: projeto realizado dentro do PET Estatística para aprendermos a criar dashboards. aqui utilizei o quarto para a criação do dashboard e um conjunto de dados sobre pinguins.
 date: "Maio de 2024"
 date-format: 05/2024
