--- a/index.qmd
+++ b/index.qmd
@@ -9,12 +9,12 @@ about:
   - icon: envelope-at
     text: email
     href: mailto:mariacecilia.macedo22@gmail.com
-  - icon: github
-    text: github
-    href: https://github.com/mariacecilia-macedo
   - icon: linkedin
     text: linkedin
     href: https://www.linkedin.com/in/maria-cec%C3%ADlia-macedo-722190262/
+  - icon: github
+    text: github
+    href: https://github.com/mceciliamacedo
 toc-title: "nesta página"
 ---
 
