--- a/index.qmd
+++ b/index.qmd
@@ -23,7 +23,7 @@ toc: false
 
 Me chamo Maria Cecília e atualmente curso Estatística na Universidade Federal de Uberlândia (UFU) e estou na fase final de minha graduação.
 
-Tive contato com Ciência de Dados na faculdade e atualmente tenho aprofundado meus estudos em Processamento de Linguagem Natural (PNL ou NLP), processamento de imagens e vizualização de dados. Minha principal ferramenta é a linguagem R, na qual possuo amplo conhecimento e busco aprimoramento constante. Além disso, venho desenvolvendo novos projetos com o objetivo de fortalecer minhas habilidades em outras tecnologias, como Python e Power BI, ampliando meu repertório técnico e minha capacidade de análise.
+Tive contato com Ciência de Dados na faculdade e atualmente tenho aprofundado meus estudos em Processamento de Linguagem Natural (PNL ou NLP), processamento de imagens e visualização de dados. Minha principal ferramenta é a linguagem R, na qual possuo amplo conhecimento e busco aprimoramento constante. Além disso, venho desenvolvendo novos projetos com o objetivo de fortalecer minhas habilidades em outras tecnologias, como Python e Power BI, ampliando meu repertório técnico e minha capacidade de análise.
 
 O objetivo desta página é servir como um portfólio, onde compartilho alguns trabalhos concluídos que gostei, refletindo meus interesses e minha trajetória acadêmica. Na seção [projetos](projetos.qmd) você encontrará alguns trabalhos de estatística e ciência de dados que realizei. Em [experiência](experiencia.qmd) poderá conferir minha trajetória profissional e acadêmica. Já na aba [atividades](atividades.qmd), compartilho alguns eventos que participei ativamente ao longo da minha formação.
 
