--- a/posts/semana_lgbt/apresentacao_semanaLGBT.qmd
+++ b/posts/semana_lgbt/apresentacao_semanaLGBT.qmd
@@ -1291,3 +1291,5 @@ filmes
 3. SEJUSP - A Secretaria de Estado de Justiça e Segurança Pública de Minas Gerais
 4. IPEA - Instituto de Pesquisa Econômica Aplicada
 
+
+# [voltar ao portfólio](https://mceciliamacedo.github.io/projetos.html) 
