--- a/posts/semana_lgbt/apresentacao_semanaLGBT.qmd
+++ b/posts/semana_lgbt/apresentacao_semanaLGBT.qmd
@@ -1292,4 +1292,6 @@ filmes
 4. IPEA - Instituto de Pesquisa Econômica Aplicada
 
 
-# [voltar ao portfólio](https://mceciliamacedo.github.io/projetos.html) 
+# voltar ao portfólio 
+
+[clique aqui](https://mceciliamacedo.github.io/projetos.html) 
